--- a/templates/student/submitF.html
+++ b/templates/student/submitF.html
@@ -2,26 +2,39 @@
 <section class="wrapper">
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">現象</a>
+      <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">現象描述</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab21" role="tab" aria-selected="true">資料建模</a>
+      <a class="nav-link" data-toggle="tab" href="#tab21" role="tab" aria-selected="true">資料模型</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">程式建模</a>
+      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">程式模型</a>
     </li>    
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">程式</a>
+      <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">程式化</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab4" role="tab" aria-selected="false">解釋</a>
+      <a class="nav-link" data-toggle="tab" href="#tab4" role="tab" aria-selected="false">觀察與除錯</a>
     </li>
   </ul>
   <br/>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-	{% include "student/submitF1.html" %}
+    <ul class="nav nav-pills" id="myTab2" role="tablist">
+	{% for question in questions %}
+    <li class="nav-item">
+      <a class="nav-link{% if forloop.counter == 1 %} active{% endif %}"" data-toggle="tab" href="#question{{forloop.counter}}" role="tab" aria-selected="true">{{forloop.counter}}</a>
+    </li>
+	{% endfor %}
+	</ul>	
+    <div class="tab-content" id="myTabContentQ">
+    {% for question in questions %}
+    <div class="tab-pane fade {% if forloop.counter == 1 %}show active {% endif %}" id="question{{forloop.counter}}" role="tabpanel" aria-labelledby="home-tab">
+	{% include "student/submitF1.html" with question=question q_index=forloop.counter %}
     </div>
+	{% endfor %}
+    </div>
+	</div>
     <div class="tab-pane fade" id="tab21" role="tabpanel" aria-labelledby="tab2-tab">
 	{% include "student/submitF21.html" %}
     </div>
