--- a/templates/teacher/twork_list.html
+++ b/templates/teacher/twork_list.html
@@ -5,12 +5,15 @@
             <tr>
                 <td>名稱</td>
                 <td>時間</td>				
-                <td colspan=2>功能</td>		
+                <td colspan={% if classroom.lesson == 9 %}3{% else %}%2{% endif %}>功能</td>		
         {% for work in works %}
             <tr>
             <td>{{forloop.revcounter}}){{work.title}}</td>
 			<td>{{work.time}}</td>
-            <td><a href="/teacher/work2/class/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
+			{% if classroom.lesson == 9 %}
+			<td><a href="/teacher/work2/question/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">現象問題</a></td>
+            {% endif %}
+			<td><a href="/teacher/work2/class/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
             <td><a href="/student/work/memo/1/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">心得</a></td>			
             </tr>
         {% endfor %}
