--- a/templates/student/submitF1.html
+++ b/templates/student/submitF1.html
@@ -3,19 +3,20 @@
   <h2>{{question.question}}</h2>
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab11" role="tab" aria-selected="true">上傳文字</a>
+      <a class="nav-link active" data-toggle="tab" href="#tab{{question.id}}11" role="tab" aria-selected="true">上傳文字</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab12" role="tab" aria-selected="true">上傳圖片</a>
+      <a class="nav-link" data-toggle="tab" href="#tab{{question.id}}12" role="tab" aria-selected="true">上傳圖片</a>
     </li>
   </ul>
   <br/>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
+    <div class="tab-pane fade show active" id="tab{{question.id}}11" role="tabpanel" aria-labelledby="tab11-tab">
       <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type=hidden name="types" value="11">
-        <input type=hidden name="index" value="{{index}}">        
+        <input type=hidden name="index" value="{{index}}"> 
+        <input type=hidden name="q_index" value="{{q_index}}">     		
         <input type=hidden name="question_id" value="{{question.id}}">     		
         <div class="form-group">
           <label for="text-memo">文字</label>
@@ -24,11 +25,12 @@
         <input type="submit" value="送出" class="btn btn-info" />
       </form>
     </div>
-    <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
+    <div class="tab-pane fade" id="tab{{question.id}}12" role="tabpanel" aria-labelledby="tab12-tab">
 	      <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type=hidden name="types" value="12">
         <input type=hidden name="index" value="{{index}}"> 
+        <input type=hidden name="q_index" value="{{q_index}}">  		
         <input type=hidden name="question_id" value="{{question.id}}">     			
         <div class="form-group">
           <label for="content_file">檔案</label>
@@ -40,6 +42,7 @@
   </div>
 </section>
 <BR>
+{% if q_index > 0 %}
 {% for works in contents1|list_item:q_index %}
 {% for work in works %}
  <div class="card card-default"> 
@@ -59,3 +62,4 @@
 </div>
 {% endfor %}
 {% endfor %}
+{% endif %}
