--- a/templates/student/submitF1.html
+++ b/templates/student/submitF1.html
@@ -47,7 +47,7 @@
 {% for work in works %}
  <div class="card card-default"> 
               {% if work.types == 12 %}
-  <div class="card-headfer"><button type="button" class="btn btn-default">{{forloop.counter}}</button>
+  <div class="card-header"><button type="button" class="btn btn-default">{{forloop.counter}}</button>
     <A href="/student/work/content/delete/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}" onclick="return confirm('確定要刪除嗎?')"><img src="/static/images/delete.gif"> 刪除</a>
     <a href="/student/work/content/edit/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}"><img src="/static/images/edit.gif"> 編輯</a>
   </div>
@@ -57,7 +57,7 @@
     <A href="/student/work/content/delete/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}" onclick="return confirm('確定要刪除嗎?')"><img src="/static/images/delete.gif"> 刪除</a>
     <a href="/student/work/content/edit/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}"><img src="/static/images/edit.gif"> 編輯</a> 
   </div>  
-  <div class="card-body">{{ work.text }}</div>
+  <div class="card-body">{{ work.text|memo|safe }}</div>
             {% endif %}
 </div>
 {% endfor %}
