--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -16,6 +16,10 @@
 {% endblock %}
 
 {% block header %}
+<!-- jQuery UI -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
 <script>
 $(function(){
   var hash = window.location.hash;
