--- a/templates/teacher/question_list.html
+++ b/templates/teacher/question_list.html
@@ -2,9 +2,9 @@
 {% block content %}
        <a href="/teacher/work2/question/add/{{classroom.lesson}}/{{classroom.id}}/{{work_id}}" role="button" class="btn btn-info active">新增問題</a>
        <table class="table">
-		{% for work in questions %}
+		{% for question in questions %}
             <tr>
-            <td>{{work.question}}</td>			
+            <td><a href="/teacher/work2/question/answer/{{classroom.lesson}}/{{classroom.id}}/{{work_id}}/{{question.id}}">{{question.question}}</a></td>			
             </tr>
 		{% endfor %}
         </table>		
