--- a/templates/teacher/memo.html
+++ b/templates/teacher/memo.html
@@ -34,7 +34,7 @@
             </tr>
         {% endfor %}
         </table>
-        {% elif lesson == "2" %}
+        {% elif lesson == "2" or lesson == "9" %}
          <table>
         <tr>   
             <td>姓名</td>
