--- a/templates/student/lesson/C16.html
+++ b/templates/student/lesson/C16.html
@@ -15,6 +15,9 @@
 <span class="k">print</span><span class="p">(</span><span class="nb">sum</span><span class="p">)</span>
 </pre></div>
 </td></tr></table></div>
+
+<iframe width="800" height="330" frameborder="0" src="http://pythontutor.com/iframe-embed.html#code=number%20%3D%2010715086071862673209%0Asum%20%3D%200%0Afor%20digit%20in%20str%28number%29%3A%0A%20%20%20%20sum%20%3D%20sum%20%2B%20int%28digit%29%0Aprint%28sum%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false"> </iframe>
+
 <BR>
 <p>練習2：求2的10次方展開後數字</p>
 <div class="highlight-python"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre>1</pre></div></td><td class="code"><div class="highlight"><pre><span></span><span class="k">print</span><span class="p">(</span><span class="mi">2</span><span class="o">**</span><span class="mi">10</span><span class="p">)</span>
