--- a/templates/student/submitF21.html
+++ b/templates/student/submitF21.html
@@ -1,11 +1,16 @@
 ﻿<div class="btn-group mb-2" role="group">
+  <!--
   <a href="/student/work/data/add/{{typing}}/{{lesson}}/{{index}}/0" role="btn" class="btn btn-default btn-sm">新增變數</a>
   <a href="/student/work/data/add/{{typing}}/{{lesson}}/{{index}}/1" role="btn" class="btn btn-default btn-sm">新增陣列</a>
   <a href="/student/work/data/add/{{typing}}/{{lesson}}/{{index}}/2" role="btn" class="btn btn-default btn-sm">新增常數</a>
+  -->
+  <button class="btn btn-warning btn-sm new-block" id="new-var" data-type="var" data-toggle="modal" data-target="#new-element" data-class="btn-warning" data-pattern="[A-Z_a-z][A-Za-z_0-9]*">新增變數</button>
+  <button class="btn btn-danger btn-sm new-block" id="new-arr" data-type="arr" data-toggle="modal" data-target="#new-element" data-class="btn-danger" data-pattern="[A-Z_a-z][A-Za-z_0-9]*">新增陣列</button>
+  <button class="btn btn-success btn-sm new-block" id="new-const" data-type="const" data-toggle="modal" data-target="#new-element" data-class="btn-success" data-pattern="[0-9]+">新增常數</button>
 </div>
 <div class="card card-default exp-editor">
   <div class="card-header">變數：
-    <ul class="exp-item-list">
+    <ul class="exp-item-list" id="var-list">
       {% for data in data1 %}
       <li class="btn btn-info btn-sm exp-item exp-item-var">
         <a href="/student/work/data/edit/{{typing}}/{{lesson}}/{{index}}/0/{{data.id}}">{{data.name}}</a>
@@ -14,7 +19,7 @@
     </ul>
   </div>
   <div class="card-header">陣列：
-    <ul class="exp-item-list">
+    <ul id="arr-list" style="list-style: none">
       {% for data in data2 %}
       <li class="btn btn-info btn-sm exp-item">
         <a href="/student/work/data/edit/{{typing}}/{{lesson}}/{{index}}/1/{{data.id}}">{{data.name}}</a>
@@ -23,7 +28,7 @@
     </ul>
   </div>
   <div class="card-header">常數：
-    <ul class="exp-item-list">
+    <ul class="exp-item-list" id="const-list">
       {% for data in data3 %}
       <li class="btn btn-info btn-sm exp-item">
         <a href="/student/work/data/edit/{{typing}}/{{lesson}}/{{index}}/2/{{data.id}}">{{data.name}}</a>
@@ -59,34 +64,34 @@
   </div>
 </div>
 
-<script>
-$(function() {
-  $('.exp-item').draggable({
-    connectToSortable: '.exp-rhs',
-    helper: "clone",
-    revert: "invalid",
-  });
+<!-- Modal -->
+<div class="modal fade" id="new-element" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="new-element-form form-inline">
+          <div class="form-group">
+            <label for="">名稱</label>
+            <input type="text" class="form-control" id="elementName" />
+          </div>
+          <div class="form-group" id="form-group-elementNumber">
+            <label for="">數量</label>
+            <input class="form-control" id="elementNumber" type="number" min="1" max="10" />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="new-element-ok">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-  $('.exp-item-var').draggable({
-    connectToSortable: '.exp-rhs, .exp-lhs',
-    helper: "clone",
-    revert: "invalid",
-  });
-
-  $('.exp-lhs').sortable({
-    receive: function(event, ui) {
-      $(this).empty().append($(ui.item).clone());
-    },
-  }).disableSelection();
-
-  $('.exp-trash').sortable({
-    receive: function(event, ui) {
-      $(ui.item).detach();
-    }
-  });
-
-  $('.sortable').sortable({
-    connectWith: '.exp-trash',
-  }).disableSelection();
-});
-</script>
+<script type="text/javascript" src="/static/js/expression-editor.js"></script>
