--- a/templates/student/submitF.html
+++ b/templates/student/submitF.html
@@ -5,10 +5,10 @@
       <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">現象描述</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab21" role="tab" aria-selected="true">資料模型</a>
+      <a class="nav-link" data-toggle="tab" href="#tab21" role="tab" aria-selected="true">資料建模</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">程式模型</a>
+      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">程式建模</a>
     </li>    
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">程式化</a>
