--- a/templates/student/submitF.html
+++ b/templates/student/submitF.html
@@ -8,7 +8,7 @@
       <a class="nav-link" data-toggle="tab" href="#tab21" role="tab" aria-selected="true">資料建模</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">程式建模</a>
+      <a class="nav-link" data-toggle="tab" href="#tab22" role="tab" aria-selected="true">流程建模</a>
     </li>    
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">程式化</a>
