--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -183,9 +183,10 @@ table.tablesorter tr:hover td {
 }
 
 /* expression editor */
-ul.exp-item-list {display: inline-flex; min-width: 20pt; padding: 3pt; position: relative; margin-bottom: 0; list-style: none}
-ul.exp-item-list>.exp-item {display: inline-flex;}
-ul.exp-item-list a {background-color: transparent; color: white}
-ul.exp-item-list a:hover {text-decoration: none}
-.exp-editor .card-body ul.exp-item-list {border: 1px dashed grey}
-.exp-editor>.card-header {padding-top: .1em; padding-bottom: .1em}
+ul.expr-item-list {display: inline-flex; min-width: 20pt; padding: 3pt; position: relative; margin-bottom: 0; list-style: none}
+ul.expr-arr-list {min-width: 20pt; padding: 3pt; position: relative; margin-bottom: 0; list-style: none}
+ul.expr-item-list>.expr-item {display: inline-flex;}
+ul.expr-item-list a {background-color: transparent; color: white}
+ul.expr-item-list a:hover {text-decoration: none}
+.expr-editor .card-body ul.expr-item-list {border: 1px dashed grey}
+.expr-editor>.card-header {padding-top: .1em; padding-bottom: .1em}
