--- a/templates/student/submitF21.html
+++ b/templates/student/submitF21.html
@@ -72,8 +72,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="new-element-ok">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
+        <button type="button" class="btn btn-primary" id="new-element-ok">新增</button>
       </div>
     </div>
   </div>
