--- a/templates/show/showreview_review.html
+++ b/templates/show/showreview_review.html
@@ -38,7 +38,7 @@ $("#id_score").rating({min:1, max:5, step:1, size:'lg'});
  
 <script >   
 var flashvars = {
-project: "/{{show.file}}" ,
+project: "/static/show/{{request.user.id}}/{{show.file}}" ,
 autostart: "false"
 };
 
@@ -73,10 +73,11 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
 	{% if show.youtube %}
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/{{show.youtube}}" frameborder="0" allowfullscreen></iframe>
 	{% endif %}
+	<!--
   {% if show.picture %}
   <img width="900" src="/static/show/pic/{{show.id}}.jpg">
   {% endif %}
-
+    -->
   <form action="." method="post" onsubmit="return checkRegistration()">
     <table class="table">
   {% if show.id|show_category  == 1 %}
