--- a/templates/show/reviewlist.html
+++ b/templates/show/reviewlist.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
-
-{% block title %}My Blog{% endblock %}
 {% load tz %}
 {% block content %}
-
+{{show.id}}--
 <h1>組別：{{show.name}}</h1>
 <h1>組員：{% for member in members %}({{member.seat}}){{member.student.first_name}}{% endfor %}</h1>
 <table>
