--- a/templates/show/showreview_review.html
+++ b/templates/show/showreview_review.html
@@ -38,7 +38,7 @@ $("#id_score").rating({min:1, max:5, step:1, size:'lg'});
  
 <script >   
 var flashvars = {
-project: "/static/show/{{request.user.id}}/{{show.file}}" ,
+project: "/static/show/{{show.id}}/{{show.file}}" ,
 autostart: "false"
 };
 
