--- a/templates/student/submitF21.html
+++ b/templates/student/submitF21.html
@@ -272,5 +272,6 @@
 
 <script>
 var exprjson = {{ expr.expr_json|safe }};
+var flowjson = {{ flow.flow_json|safe }};
 </script>
 <script type="text/javascript" src="/static/js/expression-editor.js"></script>
