--- a/templates/show/group.html
+++ b/templates/show/group.html
@@ -14,6 +14,7 @@
 　<a href="/show/zip/{{round_id}}"><img src="/static/images/icon_zip.gif">匯出到Zip檔</a><BR>
 {% endif %}
 <br>
+{{groups}}--
 <table>
 <tr>
 <td>名稱</td>  
